--- a/create_ap.conf
+++ b/create_ap.conf
@@ -22,7 +22,8 @@ NEW_MACADDR=
 DAEMONIZE=0
 NO_HAVEGED=0
 WIFI_IFACE=wlan0
-INTERNET_IFACE=eth0
+INTERNET_IFACE_1=eth0
+INTERNET_IFACE_2=eth0
 SSID=MyAccessPoint
 PASSPHRASE=12345678
 USE_PSK=0
